k8s-manifest/admin/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: cis-admin
  namespace: dev
  labels:
    app.kubernetes.io/name: cis-admin
    app.kubernetes.io/part-of: cis
    app.kubernetes.io/component: frontend
  annotations:
    argocd.argoproj.io/sync-wave: "2"
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: cis-admin
  ports:
    - name: http
      port: 80
      targetPort: 8080
      protocol: TCP
