k8s-manifest/admin/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: cis-ingress
  namespace: dev
  labels:
    app.kubernetes.io/name: cis-admin
    app.kubernetes.io/part-of: cis
  annotations:
    argocd.argoproj.io/sync-wave: "4"
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt-prod
    nginx.ingress.kubernetes.io/proxy-body-size: "10m"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "180"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "180"
    nginx.ingress.kubernetes.io/enable-real-ip: "true"
    nginx.ingress.kubernetes.io/use-forwarded-headers: "true"
spec:
  tls:
    - hosts:
        - dev-cis.idhub.ng
      secretName: cis-tls
  rules:
    - host: dev-cis.idhub.ng
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: cis-admin
                port:
                  number: 80
